<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="copyright" translatable="false">Copyright © 2021 <b>WeRecord</b></string>
    <string name="app_name">微记录</string>
    <string name="intro">引导</string>
    <string name="welcome">欢迎</string>
    <string name="super_user">ROOT</string>
    <string name="caption_welcome">欢迎使用 <b>微记录</b> 。本应用支持将您的微信<b>聊天记录，联系人</b>等信息保存为<i>TXT,HTML</i>等可随时查看、永久保存的格式。
        此外，本应用为您提供了一些额外的功能。\n不过，在使用之前，您需要<b>完成设置向导</b>以确保应用能正常工作。
    </string>
    <string name="caption_su">为了访问微信的<b>私有文件</b>，我们需要使用<b>ROOT权限</b>。请放心，<b>此权限用于且仅用于使应用能正常发挥功能</b>。
        \n请点击下方的“<b>开始检查</b>”</string>
    <string name="caption_permission">为了应用正常工作，以下权限是必要的。请放心，<b>这些权限用于且仅用于使应用正常发挥功能</b>。
       在您授权之前，我们不会使用这些权限。</string>
    <string name="start_check">开始检查</string>
    <string name="fail_and_click_to_retry">点击重试</string>
    <string name="check_succeeded">检查成功</string>
    <string name="request">申请</string>
    <string name="approve">同意</string>
    <string name="permission_granted">授权成功</string>
    <string name="goto_settings">前往设置</string>
    <string name="permission_imei">获取设备的IMEI</string>
    <string name="caption_permission_imei">用于提取数据</string>
    <string name="caption_storage_permission">用于导入导出文件</string>
    <string name="permission_storage">读写储存空间</string>
    <string name="permission">权限</string>
    <string name="approved">已同意</string>
    <string name="rationale">说明</string>
    <string name="caption_availability">应用已成功获取到了ROOT权限，现在检测此应用能否在您的设备上正常工作。\n请点击下方的“<b>开始检查</b>”</string>
    <string name="checking">正在检查…</string>
    <string name="availability">可用性</string>
    <string name="declaration">隐私政策及免责声明</string>
    <string name="read_and_approved">我已阅读并同意</string>
    <string name="q_chat_feedback_tip">已复制错误信息到剪贴板，粘贴后发送即可反馈</string>
    <string name="error_occurred">发生错误</string>
    <string name="feedback">反馈</string>
    <string name="basic_info">Basic Info</string>
    <string name="input_environment_serial">Input environment serial: </string>
    <string name="parse">parse</string>
    <string name="environment_info_output">Environment information output: </string>
    <string name="debug">debug</string>
    <string name="search">搜索</string>
    <string name="caveat">警告</string>
    <string name="alert">提示</string>
    <string name="share">分享</string>
    <string name="go_on">继续</string>
    <string name="exit">退出</string>
    <string name="start">开始</string>
    <string name="statistics">统计</string>
    <string name="close">关闭</string>
    <string name="navigate">定位</string>
    <string name="help">帮助</string>
    <string name="init_failed">初始化失败</string>
    <string name="msg_init_failed">很抱歉，应用初始化失败! 我们需要您重新进入设置向导页面，进行<b>检查或反馈</b>，点击确定以继续。</string>
    <string name="msg_exit_confirmation">是否退出本应用？</string>
    <string name="reading">读取中…</string>
    <string name="loading">加载中…</string>
    <string name="please_wait">请稍等…</string>
    <string name="chat">会话</string>
    <string name="contact">联系人</string>
    <string name="mine">我的</string>
    <string name="filter">筛选</string>
    <string name="filter_caption_sort_by">排序依据</string>
    <string name="filter_caption_order_by">排序方式</string>
    <string name="filter_caption_name">名称</string>
    <string name="filter_caption_time">时间</string>
    <string name="filter_caption_msg_count">消息数量</string>
    <string name="filter_caption_type">类型</string>
    <string name="by_name">按名称</string>
    <string name="by_last_msg_time">按最后聊天时间</string>
    <string name="by_msg_count">按消息数量</string>
    <string name="type_joined_group">加入的群聊</string>
    <string name="type_quited_group">退出的群聊</string>
    <string name="type_unknown">未知</string>
    <string name="type_friend">好友</string>
    <string name="type_deleted_friend">删除的好友</string>
    <string name="type_unfollowed_gzh">未关注的公众号</string>
    <string name="type_following_gzh">关注的公众号</string>
    <string name="type_official">官方账号</string>
    <string name="format_total_records"><![CDATA[共<b>%d</b>条记录]]></string>
    <string name="not_long_ago">不久前</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="format_days_ago">%s天前</string>
    <string name="format_weeks_ago">%s周前</string>
    <string name="format_years_ago">%s年前</string>
    <string name="format_months_ago">%s个月前</string>
    <string name="format_week_of_day">周%s</string>
    <string name="format_h_m">%d:%02d</string>
    <string name="format_m_d">%d月%d日</string>
    <string name="format_y_m_d">%d年%d月%d日</string>
    <string name="type_stranger">陌生人</string>
    <string name="type_deleted_contact">已删除的联系人</string>
    <string name="type_group">群聊</string>
    <string name="type_gzh">公众号</string>
    <string name="type_service">服务号</string>
    <string name="format_search_result">共%s条搜索结果</string>
    <string name="format_count_stats"><![CDATA[共<b>%d</b>条记录 已筛选出<b>%d</b>条]]> </string>
    <string name="bracketed_all"><i>&lt;全部&gt;</i></string>
    <string name="bracketed_none"><i>&lt;无&gt;</i></string>
    <string name="bracketed_empty"><i>&lt;空&gt;</i></string>
    <string name="last_week">上周</string>
    <string name="last_month">上个月</string>
    <string name="last_year">去年</string>
    <string name="reset_filter">重置</string>
    <string name="confirm_filter">确认</string>
    <string name="reset_completed">已重置</string>
    <string name="msg_filter_config_unchanged">筛选配置没有改变</string>
    <string name="nickname">昵称</string>
    <string name="remark">备注</string>
    <string name="last_msg_time">最后聊天时间</string>
    <string name="msg_count">消息数量</string>
    <string name="wxid">微信ID</string>
    <string name="wx_name">微信号</string>
    <string name="check_msg">查看消息</string>
    <string name="export_msg">导出消息</string>
    <string name="msg_no_more_show_this">以后不再显示此对话框</string>
    <string name="msg_type_file">文件</string>
    <string name="msg_type_call">通话</string>
    <string name="msg_type_voice_call">语音通话</string>
    <string name="msg_type_video_call">视频通话</string>
    <string name="msg_type_hb">红包</string>
    <string name="msg_type_wcx">小程序的分享</string>
    <string name="msg_type_link">链接</string>
    <string name="msg_type_picture">图片</string>
    <string name="msg_type_transfer">转账</string>
    <string name="msg_type_music">音乐</string>
    <string name="msg_type_location">位置</string>
    <string name="msg_type_video">视频</string>
    <string name="msg_type_share">分享</string>
    <string name="msg_type_plain_text">文字</string>
    <string name="msg_type_voice">语音</string>
    <string name="msg_type_system">系统消息</string>
    <string name="msg_type_unknown">未知消息类型</string>
    <string name="msg_type_emoji">表情图</string>
    <string name="msg_type_shared_url">链接</string>
    <string name="msg_type_repost">转发的消息</string>
    <string name="msg_type_push">推送消息</string>
    <string name="msg_type_card">名片</string>
    <string name="msg_type_reply">回复</string>
    <string name="msg_type_gif">GIF图片</string>
    <string name="msg_type_notification">通知</string>
    <string name="msg_type_position_share">位置共享</string>
    <string name="msg_type_solitaire">接龙</string>
    <string name="format_from_to">从%1s\n至%2s</string>
    <string name="hint_search_message">搜索聊天记录</string>
    <string name="check_only">仅查看</string>
    <string name="edit_mode_entered">已进入编辑模式</string>
    <string name="edit_mode_exited">已退出编辑模式</string>
    <string name="add_before">在前面添加</string>
    <string name="add_after">在后面添加</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="check">查看</string>
    <string name="check_message">检查</string>
    <string name="has_reached_the_top">到顶啦</string>
    <string name="has_copied_to_clipboard">已复制到剪贴板</string>
    <string name="copy_title">复制标题</string>
    <string name="copy_content">复制内容</string>
    <string name="copy_title_and_content">复制“标题: 内容”</string>
    <string name="tn_message_list">tn_message_list</string>
    <string name="restore">还原</string>
    <string name="unpreviewable">暂不支持预览</string>
    <string name="parse_failed">&lt;内容解析失败&gt;</string>
    <string name="edited_messages">已编辑的消息</string>
    <string name="reset">重置</string>
    <string name="sender">发送者</string>
    <string name="msg_content">消息内容</string>
    <string name="send_time">发送时间</string>
    <string name="change">更改</string>
    <string name="template">模板</string>
    <string name="use_template">使用模板</string>
    <string name="preview">预览</string>
    <string name="bracketed_modified">（已修改）</string>
    <string name="no_local_avatar_found">未找到该用户的本地头像，显示默认头像</string>
    <string name="now">现在</string>
    <string name="send_status">发送状态</string>
    <string name="group_owner">群主</string>
    <string name="choose_sender">选择发送者</string>
    <string name="format_sender_chosen">已选择 %s</string>
    <string name="pls_choose">请选择</string>
    <string name="use_default">使用默认</string>
    <string name="exceeded_stop_limit">超过允许时间范围上限</string>
    <string name="exceeded_start_limit">超过允许时间范围下限</string>
    <string name="timestamp_parse_failed">格式错误，解析失败</string>
    <string name="format_send_time_limit"><![CDATA[起始: <i>%s</i><br>结束: <i>%s</i>]]></string>
    <string name="status_send_failed">发送失败</string>
    <string name="status_send_suc">发送成功</string>
    <string name="check_origin">查看原消息</string>
    <string name="edition_type_rep">已编辑</string>
    <string name="edition_type_removal">已删除</string>
    <string name="edition_type_insertion">新增</string>
    <string name="functions">功能</string>
    <string name="select_function">选择功能</string>
    <string name="no_function_selected">未选择功能</string>
    <string name="confirm_execute_question">确定要执行该功能吗？</string>
    <string name="confirm">确定</string>
    <string name="load_original">加载原图</string>
    <string name="apply_changes">应用更改</string>
    <string name="press_again_to_quit">再次点击以退出</string>
    <string name="edit_send_timestamp">编辑发送时间</string>
    <string name="allowed_timestamp_range">允许设置的时间范围</string>
    <string name="help_send_timestamp">时间戳精确到毫秒，一秒包含1000毫秒。为了防止错误，默认不允许设置未来的时间。</string>
    <string name="help_edition">“<b>已应用的更改</b>”是指已经同步到微信的消息更改；“<b>未应用的更改</b>”是指您仅在本应用内对消息做的更改，尚未同步到微信。</string>
    <string name="operation">操作</string>
    <string name="no_change_was_made">无更改</string>
    <string name="message_not_found">找不到该消息~</string>
    <string name="alert_quit_discard_changes">仍有未应用的更改，确定要退出吗？退出后这些更改会被舍弃。</string>
    <string name="quit">退出</string>
    <string name="relaunching_from_recycle">应用意外终止，正在重新启动…</string>
    <string name="title">标题</string>
    <string name="description">描述</string>
    <string name="pls_input">在此输入内容</string>
    <string name="format_editor_title">编辑%s</string>
    <string name="italic_null"><i>null</i></string>
    <string name="nul">null</string>
    <string name="source">来源</string>
    <string name="load_all_contacts">加载全部联系人</string>
    <string name="check_out_zombies">查找单向好友</string>
    <string name="find_contact_by_wxid">根据微信ID添加联系人</string>
    <string name="set_as_template">设为消息模板</string>
    <string name="universal">通用</string>
    <string name="message_type_app_message">App消息</string>
    <string name="simple_edit">快速编辑</string>
    <string name="advanced_edit">高级编辑</string>
    <string name="app_msg_not_support_edit">APP消息不支持编辑内容</string>
    <string name="modify_send_status_not_supported">此消息不支持修改发送状态</string>
    <string name="warning_advanced_editor">高级编辑功能可以让您直接修改消息在数据库中的内容。但是请<b>注意</b>：
        \n(1)简易编辑和高级编辑是互相独立的，这意味者，您在简易编辑页面内对消息的编辑不会影响到高级编辑页面内的消息，反之亦然。
        \n(2)某些修改可能导致消息解析失败从而导致未知的后果，请谨慎修改。
        \n(3)若干已知会导致问题的字段默认不允许修改。
    </string>
    <string name="error_number_format">超过临界值或格式错误</string>
    <string name="error_format">格式错误</string>
    <string name="edit_lvbuffer">编辑LvBuffer</string>
    <string name="error_over_length">超过长度限制</string>
    <string name="format_error_parse_message">消息解析失败(%d)，请先还原消息</string>
</resources>